# CS-251

./: infinity_stones.csv  injection.py  numbers.txt  snakes.txt
Outlab 10/: average_balls.py  average_runs.py  create_tables.py  hitman.py  injection.py  prep_stmt.py
Outlab 4/P5/: parse.py  update.py  update_stones.json
Outlab 4/P6/: teams.py  transfer.txt
Outlab3/Task1/: prime.py
Outlab3/Task2/: choice.py  new_int.p
Outlab3/Task3/: analysis.py  convert.py  info_combined.csv  info_day.csv  info_night.csv  merge.py  transformed.csv  updated_stones.json
Outlab3/Task5/: infinity_stones.csv  infinity_stones.json  parse.py  update.py
Outlab3/Task6/: teams.py
Outlab3/Task7/: qe.py  use_qe.py
P1/: data.txt  dotcodes.sh  fakecodes.sh
P2/: employees.txt  strings.py
P3/: snakes.txt  venom.py
P4/: board_steps.py  board_total.py  boards.py  students.txt
P5/: complex.py  numbers.txt
Task1/: here.txt
outlab3/Task 4/: board.py
outlab3/Task1/: fakecodes.sh
outlab3/Task2/: employees.txt
outlab3/Task3/: hello.py  triangle.py  venom.py
outlab3/Task5/: complex.py
outlab5/P1/: CMakeLists.txt  helloworld  rawmake  usespthread
outlab5/outlab5/P1/: mygamestatic
outlab5/outlab5/P3/: execution_times
